package lapr4.integrations.dslplugin.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import lapr4.figurecatalogue.domain.DSLVersion;
import lapr4.integrations.dslplugin.domain.DSLPlugin;

public interface DSLPluginRepository extends DomainRepository<DSLVersion, DSLPlugin> {

}
